# docker-combo

./: .travis.yml  LICENSE  README.md  combos.yml  generate_workflow.py  pyproject.toml  requirements.txt  template.yml  update.py
.github/workflows/: combos_openjdk_node_11_14_workflow.yml  combos_openjdk_node_python_8-jdk_14_3_7_workflow.yml  combos_python_node_3_10-slim-bullseye_16-bullseye-slim_workflow.yml  combos_python_node_3_10_14_workflow.yml  combos_python_node_3_10_16_workflow.yml  combos_python_node_3_14_workflow.yml  combos_python_node_3_16_workflow.yml  combos_python_node_3_7_14_workflow.yml  combos_python_node_3_7_16_workflow.yml  combos_python_node_3_8_14_workflow.yml  combos_python_node_3_8_16_workflow.yml  combos_python_node_3_9_14_workflow.yml  combos_python_node_3_9_16_workflow.yml  combos_ruby_node_2_14_workflow.yml  combos_ruby_node_2_16_workflow.yml  combos_ruby_node_2_7_14_workflow.yml  combos_ruby_node_2_7_16_workflow.yml  combos_ruby_node_3_14_workflow.yml  combos_ruby_node_3_16_workflow.yml  daily.yml  generate_workflows.yml  manual.yml
