[tool.poetry]
name = "docker-combo"
version = "0.1.0"
description = ""
authors = ["Amir Szekely <kichik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
docker = "^6.0.1"
requests = {extras = ["security"], version = "^2.31.0"}
beautifulsoup4 = "^4.10.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
