[tool.poetry]
name = "docker-combo"
version = "0.1.0"
description = ""
authors = ["Amir Szekely <kichik@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
docker = "^7.1.0"
requests = {extras = ["security"], version = "^2.32.3"}
beautifulsoup4 = "^4.10.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
